see #19724 - fix #20344 - add add-opens/add-exports directive from JNLP file to macOS build
git-svn-id: https://josm.openstreetmap.de/svn/trunk@17546 0c6e7542-c601-0410-84e7-c038aed88b3b